fixed margins on bottom of main containers on all 3 pages so they wouldn't be covered by the sticky footer

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -88,6 +88,7 @@ img {
     margin-left: auto;
     margin-right: auto;
     line-height: 1.6;
+    margin-bottom: 60px;
 }
 
 .portfolio-content {
@@ -101,6 +102,7 @@ img {
     margin-right: auto;
     height: 620px;
     line-height: 1.6;
+    margin-bottom: 60px;
 }
 
 .portfolio-container {
@@ -131,6 +133,7 @@ img {
 .contact-form {
     width: 100%;
     max-width: 940px;
+    margin-bottom: 60px;
 }
 
 ::placeholder, textarea {
@@ -196,9 +199,9 @@ footer {
     }
 
 
-    /* .headercontainer {
+    .headercontainer {
         width: 768px;
-    } */
+    }
 
 }
 
@@ -225,7 +228,7 @@ footer {
     }
 
     header {
-        position: static;
+        position: relative;
         width: 100%;
     }
 
